--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 * {
-    font-family: 'Asap', sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 body {
     margin: 0;
     padding: 0;
     background-color: #fafafa;
+    color: #eabfb1;
 }
 
