--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fafafa;
-    color: #eabfb1;
+    /* color: #eabfb1; */
 }
+
+.h2 {
+    @apply text-2xl text-gray-800 
+}
+
+/* .pr {
+    @apply 
+} */
 
